formver.compiler-plugin/testData/diagnostics/stdlib/intArray/basic.kt
// FULL_JDK
// USE_STDLIB
// FULL_VIPER_DUMP

import org.jetbrains.kotlin.formver.plugin.*

fun <!VIPER_TEXT!>main<!>() {
    val list5 = IntArray(5)
    val length = list5.size
    val x = list5.get(0)
}
